--- a/_posts/2018-01-12-briscola.md
+++ b/_posts/2018-01-12-briscola.md
@@ -3,7 +3,7 @@ title: "Game of Briscola Developed in Android"
 date: 2018-01-12
 tags: [android game, briscola, java, android studio, android]
 header:
-  image: "/images/proximity/proximity.png"
+  image: "/images/nl.jpg"
 excerpt: "Android game based on the famous Italian card game."
 ---
 
