--- a/_posts/2018-01-12-tejidos.md
+++ b/_posts/2018-01-12-tejidos.md
@@ -3,7 +3,7 @@ title: "Administrative System with REST API using Rails and React.js + Redux"
 date: 2018-01-12
 tags: [ruby, ruby on rails, react.js, redux, jwt, web application]
 header:
-  image: "/images/proximity/proximity.png"
+  image: "/images/nl.jpg"
 excerpt: "Administrative system for a textile company using a web oriented architecture with Ruby on Rails for the backend API and React.js with Redux for the frontend."
 ---
 
