experimenting with styles

--- a/_posts/2018-01-12-tejidos.md
+++ b/_posts/2018-01-12-tejidos.md
@@ -5,6 +5,11 @@ tags: [ruby, ruby on rails, react.js, redux, jwt, web application, postgresql, d
 excerpt: "Administrative system for a textile company using a web oriented architecture with Ruby on Rails for the backend API and React.js with Redux for the frontend."
 ---
 
+This project is composed of 2 different github repositories:
+
+1. [Rails API](https://github.com/danielRM88/TejidosAPI)
+2. [Reactjs frontend](https://github.com/danielRM88/TejidosClient)
+
 ## Table of Contents
 - [Introduction](#introduction)
 - [Backend](#backend)
