--- a/_posts/2018-01-12-tejidos.md
+++ b/_posts/2018-01-12-tejidos.md
@@ -47,7 +47,7 @@ A total of 6 triggers are created:
 
 1. **After insert on inventories table**. When a new fabric arrives and it is placed in the inventory, the existences table, which is the one that holds how much stock there is available at the moment, needs to be updated.
 
-    ```
+  <pre style="font-size: 0.5em;">
     CREATE OR REPLACE FUNCTION update_on_inventory_insert() RETURNS TRIGGER AS 
     $BODY$
         BEGIN
@@ -62,11 +62,11 @@ A total of 6 triggers are created:
         END;
     $BODY$ LANGUAGE plpgsql;
     CREATE TRIGGER update_on_inventory_insert AFTER INSERT ON inventories FOR EACH ROW EXECUTE PROCEDURE update_on_inventory_insert();
-    ```
+  </pre>
 
 2. **After update on purchases table**. When a purchase is modified, the existences related to that purchase need to be modified as well. The trigger must check that there is consistency between the inventories table and the existences table. We cannot have existences that come from nowhere!
 
-    ```
+  <pre style="font-size: 0.5em;">
     CREATE OR REPLACE FUNCTION update_on_purchase_update() RETURNS TRIGGER AS 
     $BODY$
         DECLARE
@@ -113,11 +113,11 @@ A total of 6 triggers are created:
     $BODY$ 
     LANGUAGE plpgsql;
     CREATE TRIGGER update_on_purchase_update AFTER UPDATE ON purchases FOR EACH ROW EXECUTE PROCEDURE update_on_purchase_update();
-    ```
+  </pre>
 
 3. **Before delete on purchases table**. When a purchase is deleted, the inventories and existences associated with it must be removed from the system as well. The trigger also checks that there is enough in existences to satisfy the amount of fabrics that were aqcuired in the purchase.
 
-    ```
+  <pre style="font-size: 0.5em;">
     CREATE OR REPLACE FUNCTION update_on_purchase_delete() RETURNS TRIGGER AS 
     $BODY$
         DECLARE
@@ -170,11 +170,11 @@ A total of 6 triggers are created:
     $BODY$ 
     LANGUAGE plpgsql;
     CREATE TRIGGER update_on_purchase_delete BEFORE DELETE ON purchases FOR EACH ROW EXECUTE PROCEDURE update_on_purchase_delete();
-    ```
+  </pre>
 
 4. **After insert on sales table**. When an invoice is created, the sales table is populated with all the fabrics sold. The trigger checks that these fabrics actually exist in the existences table otherwise there will be inconsistency in the database.
 
-    ```
+  <pre style="font-size: 0.5em;">
     CREATE OR REPLACE FUNCTION update_on_invoice_insert()
       RETURNS trigger AS
     $BODY$
@@ -204,11 +204,11 @@ A total of 6 triggers are created:
     $BODY$
       LANGUAGE plpgsql;
     CREATE TRIGGER update_on_invoice_insert AFTER INSERT ON sales FOR EACH ROW EXECUTE PROCEDURE update_on_invoice_insert();
-    ```
+  </pre>
 
 5. **After update on invoices table**. When an invoice is updated, the existences table needs to be updated accordingly. The trigger makes sure that there is no inconsistency in the existences table.
 
-    ```
+  <pre style="font-size: 0.5em;">
     CREATE OR REPLACE FUNCTION update_on_invoice_update()
       RETURNS trigger AS
     $BODY$
@@ -251,11 +251,11 @@ A total of 6 triggers are created:
     $BODY$
       LANGUAGE plpgsql;
     CREATE TRIGGER update_on_invoice_update AFTER UPDATE ON invoices FOR EACH ROW EXECUTE PROCEDURE update_on_invoice_update();
-    ```
+  </pre>
 
 6. **Before delete on invoices table**. When an invoice is deleted, the sales table and the existences table need to be updated. Sales records that belong to the invoice are deleted and the quantities are added to existences table.
 
-    ```
+  <pre style="font-size: 0.5em;">
     CREATE OR REPLACE FUNCTION update_on_invoice_delete()
       RETURNS trigger AS
     $BODY$
@@ -285,7 +285,7 @@ A total of 6 triggers are created:
     $BODY$
       LANGUAGE plpgsql;
     CREATE TRIGGER update_on_invoice_delete BEFORE DELETE ON invoices FOR EACH ROW EXECUTE PROCEDURE update_on_invoice_delete();
-    ```
+  </pre>
 
 ### Web API
 
