--- a/_posts/2018-01-12-tejidos.md
+++ b/_posts/2018-01-12-tejidos.md
@@ -47,22 +47,24 @@ A total of 6 triggers are created:
 
 1. **After insert on inventories table**. When a new fabric arrives and it is placed in the inventory, the existences table, which is the one that holds how much stock there is available at the moment, needs to be updated.
 
-  <pre style="font-size: 0.5em;">
-    CREATE OR REPLACE FUNCTION update_on_inventory_insert() RETURNS TRIGGER AS 
-    $BODY$
-        BEGIN
-            --
-            -- After an insert in inventories table, the sentence is replicated in existences table.
-            --
-            IF (TG_OP = 'INSERT') THEN
-                INSERT INTO existences (inventory_id, pieces, amount, unit, created_at, updated_at)
-                VALUES (NEW.id, NEW.pieces, NEW.amount, NEW.unit, current_timestamp, current_timestamp);
-            END IF;
-            RETURN NULL; -- result is ignored since this is an AFTER trigger
-        END;
-    $BODY$ LANGUAGE plpgsql;
-    CREATE TRIGGER update_on_inventory_insert AFTER INSERT ON inventories FOR EACH ROW EXECUTE PROCEDURE update_on_inventory_insert();
-  </pre>
+  <div class="highlight">
+    <pre style="font-size: 0.5em !important;">
+      CREATE OR REPLACE FUNCTION update_on_inventory_insert() RETURNS TRIGGER AS 
+      $BODY$
+          BEGIN
+              --
+              -- After an insert in inventories table, the sentence is replicated in existences table.
+              --
+              IF (TG_OP = 'INSERT') THEN
+                  INSERT INTO existences (inventory_id, pieces, amount, unit, created_at, updated_at)
+                  VALUES (NEW.id, NEW.pieces, NEW.amount, NEW.unit, current_timestamp, current_timestamp);
+              END IF;
+              RETURN NULL; -- result is ignored since this is an AFTER trigger
+          END;
+      $BODY$ LANGUAGE plpgsql;
+      CREATE TRIGGER update_on_inventory_insert AFTER INSERT ON inventories FOR EACH ROW EXECUTE PROCEDURE update_on_inventory_insert();
+    </pre>
+  </div>
 
 2. **After update on purchases table**. When a purchase is modified, the existences related to that purchase need to be modified as well. The trigger must check that there is consistency between the inventories table and the existences table. We cannot have existences that come from nowhere!
 
