--- a/_posts/2018-01-12-tejidos.md
+++ b/_posts/2018-01-12-tejidos.md
@@ -48,7 +48,7 @@ A total of 6 triggers are created:
 1. **After insert on inventories table**. When a new fabric arrives and it is placed in the inventory, the existences table, which is the one that holds how much stock there is available at the moment, needs to be updated.
 
   <div class="highlight">
-    <pre style="font-size: 0.5em !important;">
+    <pre style="font-size: 0.5em !important;" class="highlight">
       CREATE OR REPLACE FUNCTION update_on_inventory_insert() RETURNS TRIGGER AS 
       $BODY$
           BEGIN
