experimenting with code blocks

--- a/_posts/2018-01-12-tejidos.md
+++ b/_posts/2018-01-12-tejidos.md
@@ -45,7 +45,7 @@ To achieve this, several triggers are developed whose purpose can be seen in Fig
 
 A total of 6 triggers are created:
 
-1. **After insert on inventories table**. When a new fabric arrives and it is placed in the inventory, the existences table, which is the one that holds how much stock there is available at the moment, needs to be updated.
+* **After insert on inventories table**. When a new fabric arrives and it is placed in the inventory, the existences table, which is the one that holds how much stock there is available at the moment, needs to be updated.
 
   <div class="highlighter-rouge">
     <div class="highlight">
@@ -68,7 +68,7 @@ A total of 6 triggers are created:
     </div>
   </div>
 
-2. **After update on purchases table**. When a purchase is modified, the existences related to that purchase need to be modified as well. The trigger must check that there is consistency between the inventories table and the existences table. We cannot have existences that come from nowhere!
+* **After update on purchases table**. When a purchase is modified, the existences related to that purchase need to be modified as well. The trigger must check that there is consistency between the inventories table and the existences table. We cannot have existences that come from nowhere!
 
   <div class="highlighter-rouge">
     <div class="highlight">
@@ -123,7 +123,7 @@ A total of 6 triggers are created:
     </div>
   </div>
 
-3. **Before delete on purchases table**. When a purchase is deleted, the inventories and existences associated with it must be removed from the system as well. The trigger also checks that there is enough in existences to satisfy the amount of fabrics that were aqcuired in the purchase.
+* **Before delete on purchases table**. When a purchase is deleted, the inventories and existences associated with it must be removed from the system as well. The trigger also checks that there is enough in existences to satisfy the amount of fabrics that were aqcuired in the purchase.
 
   <div class="highlighter-rouge">
     <div class="highlight">
@@ -184,7 +184,7 @@ A total of 6 triggers are created:
     </div>
   </div>
 
-4. **After insert on sales table**. When an invoice is created, the sales table is populated with all the fabrics sold. The trigger checks that these fabrics actually exist in the existences table otherwise there will be inconsistency in the database.
+* **After insert on sales table**. When an invoice is created, the sales table is populated with all the fabrics sold. The trigger checks that these fabrics actually exist in the existences table otherwise there will be inconsistency in the database.
 
   <div class="highlighter-rouge">
     <div class="highlight">
@@ -222,7 +222,7 @@ A total of 6 triggers are created:
     </div>
   </div>
 
-5. **After update on invoices table**. When an invoice is updated, the existences table needs to be updated accordingly. The trigger makes sure that there is no inconsistency in the existences table.
+* **After update on invoices table**. When an invoice is updated, the existences table needs to be updated accordingly. The trigger makes sure that there is no inconsistency in the existences table.
 
   <div class="highlighter-rouge">
     <div class="highlight">
@@ -273,7 +273,7 @@ A total of 6 triggers are created:
     </div>
   </div>
 
-6. **Before delete on invoices table**. When an invoice is deleted, the sales table and the existences table need to be updated. Sales records that belong to the invoice are deleted and the quantities are added to existences table.
+* **Before delete on invoices table**. When an invoice is deleted, the sales table and the existences table need to be updated. Sales records that belong to the invoice are deleted and the quantities are added to existences table.
 
   <div class="highlighter-rouge">
     <div class="highlight">
