finished tejidos post

--- a/_posts/2018-01-12-tejidos.md
+++ b/_posts/2018-01-12-tejidos.md
@@ -15,9 +15,8 @@ This project is composed of 2 different github repositories:
 - [Backend](#backend)
     - [Data model](#data-model)
     - [Database](#database)
-    - [Web API](#web-api)
-        - [Authentication](#authentication)
 - [Frontend](#frontend)
+    - [Video of the application working](#video-of-the-application-working)
 
 
 ## Introduction
@@ -26,7 +25,7 @@ Multilayer service oriented architecture solution developed as an administrative
 The project is composed of a backend application built with **Ruby on Rails** with a **PostgreSQL** database, and a frontend application developed in **Reactjs**.
 
 ## Backend
-The backend of the application consists of a Web API with a Datastore. As mentioned before the API is built using Rails and the datastore selected is PostgreSQL.
+The backend of the application consists of a Web API with a Datastore. A RESTful API is implemented following the MVC pattern and JSON web token is used for user authentication. As mentioned before the API is built using Rails and the datastore selected is PostgreSQL.
 
 For this project, the business logic will be placed in the relational database in the form of triggers. These triggers will have the responsability of maintaining a consistent inventory of fabrics. Although I am not a big advocate of having the business logic in the RDMS, it was a good learning exercise.
 
@@ -311,11 +310,48 @@ A total of 6 triggers are created:
     </div>
   </div>
 
-### Web API
+## Frontend
+The frontend application is built using Reactjs combined with redux to store the state of the application.
 
+The architecture of the frontend application is heavily based in the one displayed in this great [post](https://medium.com/@rajaraodv/a-guide-for-building-a-react-redux-crud-app-7fe0b8943d0f).
 
-#### Authentication
+Figure 2 shows the frontend application. It is possible to observe that there are four major nav links (in spanish), 'Compras'(Purchases), 'Facturas'(Invoices), 'Inventario'(Inventory) and 'Catalogo'(Catalog) which in turn has 'Telas'(Fabrics), 'Clientes'(Clients) and 'Proveedores'(Providers).
 
+<figure>
+  <img src="/images/overall-interface.png">
+  <figcaption>Figure 2: home screen of the frontend application</figcaption>
+</figure>
 
+Figure 3 shows the index page for fabrics after selecting 'Telas' in the nav bar.
 
+<figure>
+  <img src="/images/fabrics-index.png">
+  <figcaption>Figure 3: fabrics index page</figcaption>
+</figure>
+
+From here you can create a new fabric, edit or delete one. The edit and create pages use the same form component which can be seen in Figure 4.
+
+<figure>
+  <img src="/images/fabrics-edit.png">
+  <figcaption>Figure 4: fabrics edit page</figcaption>
+</figure>
+
+All the pages except for the 'Inventario'(Inventory) follow this same pattern. An index page to see all the records, a new page to create a new record and an edit page to update it.
+
+Figure 5 shows the create page for a new 'Compra'(Purchase).
+
+<figure>
+  <img src="/images/purchase-new.png">
+  <figcaption>Figure 5: new purchase</figcaption>
+</figure>
+
+Figure 6 shows the 'Inventario'(Inventory) page, which displays the current existences of stock available.
+
+<figure>
+  <img src="/images/inventory.png">
+  <figcaption>Figure 6: inventory</figcaption>
+</figure>
+
+### Video of the application working
+**[Here](https://drive.google.com/file/d/1SzaA3rM4yovUbM8OygPIQFXP9p0wi6FA/view?usp=sharing) is a video of the application in action**.
 
